RESOLVED FIXED171272
Supplementary Multilingual Plane Complex Scripts Rendered Incorrectly
https://bugs.webkit.org/show_bug.cgi?id=171272
Summary Supplementary Multilingual Plane Complex Scripts Rendered Incorrectly
Myles C. Maxfield
Reported 2017-04-25 06:45:30 PDT
Supplementary Multilingual Plane Complex Scripts Rendered Incorrectly
Attachments
Patch (5.50 KB, patch)
2017-04-25 06:47 PDT, Myles C. Maxfield
no flags
Patch (7.82 KB, patch)
2017-04-25 09:31 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from ews100 for mac-elcapitan (982.01 KB, application/zip)
2017-04-25 10:37 PDT, Build Bot
no flags
Myles C. Maxfield
Comment 1 2017-04-25 06:47:41 PDT
Myles C. Maxfield
Comment 2 2017-04-25 09:13:33 PDT
Myles C. Maxfield
Comment 3 2017-04-25 09:31:29 PDT
Build Bot
Comment 4 2017-04-25 10:37:44 PDT
Comment on attachment 308107 [details] Patch Attachment 308107 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3602459 New failing tests: webrtc/datachannel/basic.html
Build Bot
Comment 5 2017-04-25 10:37:45 PDT
Created attachment 308115 [details] Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 6 2017-04-25 13:58:41 PDT
Comment on attachment 308107 [details] Patch Clearing flags on attachment: 308107 Committed r215756: <http://trac.webkit.org/changeset/215756>
WebKit Commit Bot
Comment 7 2017-04-25 13:58:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.