Supplementary Multilingual Plane Complex Scripts Rendered Incorrectly https://bugs.webkit.org/show_bug.cgi?id=171272 <rdar://problem/30966764>

Reviewed by Zalan Bujtas.

Source/WebCore:

These scripts need to take the complex text codepath.

Test: fast/text/kaithi.html

* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::characterRangeCodePath):

LayoutTests:

* fast/text/kaithi-expected.html: Added.
* fast/text/kaithi.html: Added.
* platform/ios/TestExpectations:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/188159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215756 268f45cc-cd09-0410-ab3c-d52691b4dbfc